--- a/docs/_main.tex
+++ b/docs/_main.tex
@@ -80,7 +80,7 @@
 
 \title{Conformal Mapping}
 \author{Ashan J}
-\date{2024-05-18}
+\date{2024-05-25}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -397,10 +397,59 @@ In differential form this becomes
 \[\frac{|dw|}{1-|w|^2} = \frac{|dz|}{1-|z|^2},\]
 which means that if \(\gamma\) is any smooth curve in \(\mathbb{D}\), and \(\omega=f(z)\) is a conformal self-map of \(\mathbb{D}\), then
 \[\int_{f\circ \gamma}\frac{|dw|}{1-|w|^2} =\int_{\gamma} \frac{|dz|}{1-|z|^2}.\]
-Thus to obtain a length function that is invariant under conformal self-maps of \(\mathbb{D}\),we are led to make the following definition. We define the
-length of \(\gamma\) in the hyperbolic metric by
-\[\text{hyperbolic length of } \gamma = =\int_{\gamma} \frac{|dz|}{1-|z|^2}\]
-\#\# Proof of Riemann Mapping Theorem
+Thus to obtain a length function that is invariant under conformal self-maps of \(\mathbb{D}\),we are led to make the following definition.
+
+\begin{definition}
+\protect\hypertarget{def:unnamed-chunk-29}{}\label{def:unnamed-chunk-29}We define the length of \(\gamma\) in the hyperbolic metric by
+\[\text{hyperbolic length of } \gamma =2\int_{\gamma} \frac{|dz|}{1-|z|^2}\]
+\end{definition}
+
+The factor 2 is a harmless factor, which is often omitted. (It adjusts the
+metric so that its curvature is -1.)
+
+\begin{definition}
+\protect\hypertarget{def:unnamed-chunk-30}{}\label{def:unnamed-chunk-30}The hyperbolic distance \(\rho(z_0, z_1)\) from \(z_0\) to \(z_1\) is defined as the infimum (greatest lower bound) of the hyperbolic lengths of all piecewise smooth curves in \(\mathbb{D}\) from \(z_0\) to \(z_1\).
+\[\rho(z_0, z_1)
+  =\inf_\gamma\left\{\text{hyperbolic length of } \gamma \right\}
+  =\inf_\gamma\left\{2\int_{\gamma} \frac{|dz|}{1-|z|^2}\right\}\]
+\end{definition}
+
+\includegraphics{figures/Riemann_Mapping_Therom/fig1.png}
+
+Since conformal self-maps of \(\mathbb{D}\) preserve the hyperbolic lengths of curves, they also preserve hyperbolic distances. That is, for any conformal self-map \(w = J(z)\) of \(\mathbb{D}\),
+\[ \rho(f(z_0), f(z_1)) = \rho(z_0, z_1), \quad \text{where } z_0, z_1 \in \mathbb{D}. \]
+
+\includegraphics{figures/Riemann_Mapping_Therom/fig2.png}
+
+\begin{theorem}
+\protect\hypertarget{thm:unnamed-chunk-33}{}\label{thm:unnamed-chunk-33}For any two distinct points \(z_0, z_1\) in the open unit disk \(\mathbb{D}\), there exists a unique shortest curve in \(\mathbb{D}\) from \(z_0\) to \(z_1\) in the hyperbolic metric. Specifically, this curve corresponds to the arc of the circle passing through \(z_0\) and \(z_1\) that is orthogonal to the unit circle.
+\end{theorem}
+
+\begin{definition}
+\protect\hypertarget{def:unnamed-chunk-34}{}\label{def:unnamed-chunk-34}The paths of shortest hyperbolic length between points are called \textbf{hyperbolic geodesics}.
+\end{definition}
+
+\begin{itemize}
+\tightlist
+\item
+  These hyperbolic geodesics play a role similar to that of straight lines in Euclidean geometry. They satisfy all the axioms of Euclidean geometry except for the parallel axiom (which states that through each point not on a given line, there passes a unique straight line through the point and parallel to the given line).
+\end{itemize}
+
+\includegraphics{figures/Riemann_Mapping_Therom/fig3.png}
+
+\begin{proof}
+(proof of theorem), Let \(w = f(z)\) be a conformal self-map of \(\mathcal{D}\)
+such that \(f(z_o) = 0\).
+By multiplying by a unimodular constant, we can arrange that \(f(z_l) = r > 0\). Since \(f(z)\) preserves hyperbolic lengths, and since \(fx(z)\) maps circles orthogonal to the unit circle onto circles orthogonal to the unit circle, it suffices to show that the straight line segment from 0 to \(r\) is a unique path of shortest hyperbolic length from 0 to \(r\).
+For this, let \(\gamma(t) = x(t) + iy(t)\), \(0 \leq t \leq 1\), be a piecewise smooth path in \(\mathbb{C}\) from 0 to \(r\).
+Then \(alpha(t) = \Re(\gamma(t)) = x(t)\) defines a path in \(\mathbb{D}\) from 0 to \(r\) along the real axis, and
+\[\int_\alpha \frac{|dz|}{1-|z|^2}=\int_0^1\frac{|dx(t)|}{1-(x(t))^2}\leq \int_0^1\frac{|dx(t)|}{1-(\gamma(t))^2}\leq \int_\gamma \frac{|dz|}{1-|z|^2}\]
+
+If \(y(t) \neq 0\) for some \(t\), then \(|\gamma(t)| > |x(t)|\), and the first inequality above is strict. In this case, the path \(a(t)\) on the real axis is strictly shorter than the path \(\gamma(t)\). Further, if \(a(t)\) is decreasing on some interval, we could reduce the integral by deleting a parameter interval over which \(a(t)\) starts and ends at the same value. We conclude that the integral is a minimum exactly when \(\gamma(t)\) is real and nondecreasing, in which case the path is the straight line segment from 0 to \(r\).
+\end{proof}
+
+\section{Proof of Riemann Mapping Theorem}\label{proof-of-riemann-mapping-theorem}
+
 Recall the following theorem.
 
 \begin{theorem}
@@ -440,9 +489,30 @@ So, \(h(z) = e^{g(z)/2}\) is an analytic branch of \(\sqrt{z - a}\) in \(D\), an
 Thus \(h(z)\) is univalent, and \(h(z)\) maps \(D\) conformally onto \(h(D)\). Finally, note that if \(w_0 \in h(D)\), then \(-w_0 \notin h(D)\). Indeed, if \(w_0 = h(z_0)\) and \(-w_0 = h(z_1)\) for \(z_0, z_1 \in D\), then \(z_0 = h(z_0)^2 + a = w_0^2 + a = h(z_1)^2 + a = z_1\), which is impossible. We summarize.
 
 \begin{lemma}
-\protect\hypertarget{lem:unnamed-chunk-29}{}\label{lem:unnamed-chunk-29}Let \(D\) be a simply connected domain. Suppose \(a \notin D\), and let
+\protect\hypertarget{lem:unnamed-chunk-37}{}\label{lem:unnamed-chunk-37}Let \(D\) be a simply connected domain. Suppose \(a \notin D\), and let
 \(h(z)\) be an analytic branch of \(\sqrt{z - a}\) in \(D\). Then \(h(z)\) is univalent on \(D\), and further, \(h(D)\) is disjoint from \(-h(D)\).
 \end{lemma}
+
+\begin{proof}
+Done it earler.
+\end{proof}
+
+\subsection{Adlof Proof}\label{adlof-proof}
+
+\begin{theorem}[Riemann Mapping Theorem]
+\protect\hypertarget{thm:unnamed-chunk-39}{}\label{thm:unnamed-chunk-39}Given any simply connected region \(\Omega\) which is not the whole plane, and a point \(z_0\) in \(\Omega\), there exists a unique analytic function \(f(z)\) in \(\Omega\), normalized by the conditions \(f(z_0) = 0\), \(f'(z_0) > 0\), such that \(f(z)\) defines a one-to-one mapping of \(\Omega\) onto the disk \(|w| < 1\).
+\end{theorem}
+
+\begin{proof}
+\leavevmode
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Uniqueness}:
+\end{itemize}
+
+\end{proof}
 
   \bibliography{book.bib,packages.bib}
 
