--- a/05-Codes_for_Graphs.Rmd
+++ b/05-Codes_for_Graphs.Rmd
@@ -64,3 +64,13 @@ z<-outer(x,y,function(x,y) log(x^2 + y^2)*sin(theta) + atan(y/x)*cos(theta) -c)
 contour(x,y,z,nlevels=0)
 ```
 
+```{python}
+from sympy import *
+theta=1
+c=2
+x, y = symbols('x y')
+#plot_implicit(x**3 + x**2 - y**2, (x, -2, 2), (y, -2, 2))
+plot_implicit(log(x**2 + y**2)*sin(theta) + atan(y/x)*cos(theta) -c,
+(x, -10, 10), (y, -10, 10))
+```
+
