--- a/05-Codes_for_Graphs.Rmd
+++ b/05-Codes_for_Graphs.Rmd
@@ -116,8 +116,8 @@ from sympy import *
 x, y = symbols('x y')
 
 # If Theta=pi and c=1
-theta=3
-c=1
-p=plot_implicit(log(x**2 + y**2)*cos(theta) + atan(y/x)*sin(theta) -c,(x, -100, 100), (y, -100, 100))
+theta=1
+c=6
+p=plot_implicit(log(x**2 + y**2)*cos(theta) + atan(y/x)*sin(theta) -c,(x, -45, 45), (y, -80, 80),show=False,xlabel='Re',ylabel='Im')
 p.show()
 ```
